<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/profile"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/user_p_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/round_background"
                android:scaleType="fitCenter"
                android:src="@drawable/profile_placeholder" />

            <TextView
                android:id="@+id/change_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/change_image"
                android:textColor="@color/grey"
                android:textSize="15sp" />


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="20dp"
                android:rowCount="6">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/user_p_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="3"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="Username"
                    android:textColor="@color/grey"
                    android:textColorHighlight="@color/grey" />
                <!--        </GridLayout>-->

                <!--        <GridLayout-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:columnCount="2"-->
                <!--            android:padding="20dp"-->
                <!--            android:rowCount="6">-->

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/user_p_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="3"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:text="Email"
                    android:textColor="@color/grey"
                    android:textColorHighlight="@color/grey" />
                <!--        </GridLayout>-->
                <!--        -->
                <!--        -->
                <!--        <GridLayout-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:columnCount="2"-->
                <!--            android:padding="20dp"-->
                <!--            android:rowCount="6">-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/phoneno"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/user_p_phoneno"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_columnWeight="3"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:inputType="phone"
                    android:text="PhoneNo"
                    android:textColor="@color/grey"
                    android:textColorHighlight="@color/grey" />
                <!--         </GridLayout>-->


                <!--        <GridLayout-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:columnCount="2"-->
                <!--            android:padding="20dp"-->
                <!--            android:rowCount="6">-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/user_p_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_columnWeight="3"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:text="Password"
                    android:textColor="@color/grey"
                    android:textColorHighlight="@color/grey" />
                <!--        </GridLayout>-->

                <!--        <GridLayout-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:columnCount="2"-->
                <!--            android:padding="20dp"-->
                <!--            android:rowCount="6">-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/user_p_adderess"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:layout_columnWeight="3"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="Address"
                    android:textColor="@color/grey"
                    android:textColorHighlight="@color/grey" />
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/profile_update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="35dp"
                    android:backgroundTint="@color/grey"
                    android:text="@string/update"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/user_profile_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</FrameLayout>